--- a/app/design/frontend/default/mrst/layout/local.xml
+++ b/app/design/frontend/default/mrst/layout/local.xml
@@ -7,7 +7,7 @@
  *
  * @category    design
  * @package     my_theme_default
- * @copyright   Copyright (c) PixelJaws 2013.
+ * @copyright   Copyright (c)  2013.
  */
 -->
 <layout version="0.1.0">
@@ -55,7 +55,7 @@
 		<block type="page/html_head" name="footerjs" as="footerjs" template="page/html/footerjs.phtml">
 			<action method="addItem"><type>skin_js</type><name>js/plugins.js</name></action>
 			<!--<action method="addItem"><type>skin_js</type><name>js/jquery.caroufeddel-6.2.1.js</name></action>-->
-			<!-- moved to scripts.js <action method="addItem"><type>skin_js</type><name>js/easyResponsiveTabs.js</name></action>-->
+			<!-- custome scripts -->
 			<action method="addItem"><type>skin_js</type><name>js/scripts.js</name></action>
 		</block>
 	</reference>	
@@ -63,30 +63,21 @@
 
 	<!-- Remove callouts and rarely used stuff -->
 	
-<!--	<remove name="cart_sidebar"/>
+	<!--	
+	<remove name="cart_sidebar"/>
 	<remove name="checkout_cart_link" />
+	<remove name="catalog.compare.list" /
+	<remove name="catalog.compare.sidebar" />
 	
 	<remove name="right.poll"/>
 	<remove name="right.permanent.callout"/>
-	<remove name="left.permanent.callout"/>
-	<remove name="paypal.partner.right.logo"/>-->
-	
-	<!--<remove name="catalog.compare.sidebar" />
 	<remove name="right.reports.product.viewed" />
-	-->
-   <!-- <remove name="right.permanent.callout" />
-    <remove name="left.permanent.callout" />
-    <remove name="left.newsletter" />
-    
-    <remove name="paypal.partner.right.logo" />
-    <remove name="right.poll" />
-    <remove name="cart_sidebar" />
-    <remove name="catalog.compare.list" />-->
-
+	<remove name="paypal.partner.right.logo"/>
 	
-
-
-
+	<remove name="left.permanent.callout" />
+    	<remove name="left.newsletter" />
+	<remove name="left.permanent.callout"/>
+	-->
 
 
 </default>
@@ -109,10 +100,11 @@
 	</reference>
     <reference name="content">
     	<!-- call slider -->
-		<block type="page/html" as="slider" name="slider" before="-" template="page/slider.phtml"/>
+	<block type="page/html" as="slider" name="slider" before="-" template="page/slider.phtml"/>
     </reference>
 	
 	<reference name="footerjs">
+	<!-- add js need to be loaded in home page -->
 	
 	</reference>
 	
@@ -186,11 +178,11 @@
 		
 		<reference name="product.info">
 			<block type="page/html_pager" name="product_review_list.toolbar"/>
-            <block type="core/template" name="product_review_list.count" template="review/product/view/count.phtml" />
-            <block type="review/product_view_list" name="product.detail.info.product_additional_data" as="product_reviews" template="review/product/view/list.phtml">
-            <block type="review/form" name="product.review.form" as="review_form">
-            </block>
-            </block>
+            		<block type="core/template" name="product_review_list.count" template="review/product/view/count.phtml" />
+            		<block type="review/product_view_list" name="product.detail.info.product_additional_data" as="product_reviews" template="review/product/view/list.phtml">
+            		<block type="review/form" name="product.review.form" as="review_form">
+            		</block>
+            		</block>
 		</reference>
 		
 		
